--- a/package.json
+++ b/package.json
@@ -2,16 +2,17 @@
   "name": "client",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "webpack-dev-server --mode development",
-    "build": "webpack -p --progress"
+    "build": "webpack -p --progress",
+    "deploy": "scripts/deploy.sh"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/jquery": "^3.3.35"
+    "@types/jquery": "^3.3.35",
+    "tslint": "^6.1.2"
   },
   "devDependencies": {
     "ts-loader": "^7.0.1",
