--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack -p --progress",
+    "build": "webpack --mode=production --progress",
     "deploy": "scripts/deploy.sh"
   },
   "author": "",
@@ -17,9 +17,8 @@
   "devDependencies": {
     "ts-loader": "^7.0.1",
     "typescript": "^3.8.3",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-dev-server": "^3.11.2",
-    "webpack-obfuscator": "^0.28.0"
+    "webpack": "^5.41.0",
+    "webpack-cli": "^4.7.2",
+    "webpack-obfuscator": "^3.3.2"
   }
 }
